--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -1,4 +1,4 @@
-name: Build and Release Android App
+name: Build Android and iOS
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_android:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -39,4 +39,52 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: release-apk
-        path: build/app/outputs/flutter-apk/app-release.apk 
+        path: build/app/outputs/flutter-apk/app-release.apk
+  
+  build_ios:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v3
+    
+    # 设置Xcode版本
+    - name: Set up Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: latest-stable
+    
+    # 设置Flutter环境
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.19.3'
+        channel: 'stable'
+    
+    # 获取Flutter依赖
+    - name: Get dependencies
+      run: flutter pub get
+    
+    # 安装Pod依赖
+    - name: Install Pod Dependencies
+      run: |
+        cd ios
+        pod install
+    
+    # 构建iOS
+    - name: Build iOS
+      run: flutter build ios --release --no-codesign
+    
+    # 创建构建归档
+    - name: Archive iOS build artifacts
+      run: |
+        cd build/ios/iphoneos
+        mkdir -p Payload
+        cp -r Runner.app Payload
+        zip -r app.zip Payload
+        mv app.zip ../../app.ipa
+    
+    # 上传IPA作为构建产物
+    - name: Upload IPA
+      uses: actions/upload-artifact@v3
+      with:
+        name: release-ipa
+        path: build/ios/app.ipa 
