--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -9,11 +9,20 @@ on:
 jobs:
   build_android:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/cirruslabs/flutter:stable
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
+      
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.4'
+          channel: 'stable'
+        
+      - name: Print Flutter/Dart versions
+        run: |
+          flutter --version
+          dart --version
         
       - name: Get Flutter dependencies
         run: flutter pub get
@@ -21,15 +30,15 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
         
-      # 将APK复制到可访问的位置，避免使用upload-artifact
+      # 将APK复制到可访问的位置
       - name: Copy APK to artifacts directory
         run: |
-          mkdir -p /github/workspace/artifacts
-          cp build/app/outputs/flutter-apk/app-release.apk /github/workspace/artifacts/
+          mkdir -p artifacts
+          cp build/app/outputs/flutter-apk/app-release.apk artifacts/
       
-      # 打印APK位置信息，便于手动下载
-      - name: Print artifact location
-        run: |
-          echo "APK built successfully! Find it in GitHub Actions build logs."
-          echo "APK path: /github/workspace/artifacts/app-release.apk"
-          ls -la /github/workspace/artifacts/ 
+      # 上传构建产物
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: artifacts/app-release.apk 
