--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,7 @@ dependencies:
     sdk: flutter
   flutter_calendar_carousel: ^2.4.2
   flutter_colorpicker: ^1.0.3
-  flutter_local_notifications:
-    version: ^16.3.0
-    platforms:
-      android: true
-      ios: true
-      macos: true
-      linux: false
+  flutter_local_notifications: ^16.3.0
   fluttertoast: ^8.2.2
   geocoding: ^2.1.1
   geolocator: ^10.0.1
