--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -15,7 +15,7 @@ jobs:
       
     steps:
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       
       # 创建临时构建分支并替换依赖
       - name: Create build branch with patched dependencies
@@ -33,23 +33,30 @@ jobs:
           git commit -m "Temporary build fix: Replace video_trimmer with direct video_player"
       
       # 直接下载Flutter并设置环境变量
-      - name: Download and setup Flutter
+      - name: Setup Flutter (latest stable)
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 'stable' # Request the latest stable version
+          channel: 'stable'
+          cache: true # Enable Flutter SDK cache
+
+      - name: Verify Flutter and Dart versions
         run: |
-          mkdir -p $HOME/flutter
-          wget -q https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_3.24.0-stable.tar.xz
-          tar xf flutter_linux_3.24.0-stable.tar.xz -C $HOME
-          echo "$HOME/flutter/bin" >> $GITHUB_PATH
-        
-      - name: Print Flutter/Dart versions
-        run: |
+          echo "Flutter version:"
           flutter --version
+          echo "Dart version:"
           dart --version
-        
+          echo "Pub version:"
+          flutter pub --version
+        shell: bash
+
       - name: Get Flutter dependencies
         run: flutter pub get
+        shell: bash
         
       - name: Build APK
         run: flutter build apk --release
+        shell: bash
         
       # 将APK复制到可访问的位置
       - name: Copy APK to artifacts directory
@@ -59,7 +66,7 @@ jobs:
       
       # 上传构建产物
       - name: Upload APK
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3 # Updated to v3
         with:
           name: release-apk
           path: artifacts/app-release.apk 
